# Scalable-Notetaking-App

./: .gitignore  README.md  SECURITY.md  docker-compose.yml  docker.env.example
backend/: .dockerignore  .env.docker  Dockerfile  Dockerfile.postgres  auth.py  docker-compose.yml  init.sql  main.py  migrate_db.py  requirements.txt  security.py  test.py  test_auth.py  test_db_connection.py
db/: init.sql
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tmp.tsx  vite.config.ts
frontend/src/: App.css  App.css.bak2  App.tsx  index.css  react-markdown.d.ts
helm/: install.sh
helm/notes-app/: Chart.yaml  README.md  values.yaml
k8s/: README.md
k8s/base/: backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  (+9 more)
microservices/: README.md  SETUP_COMPLETE.md  docker-compose.yml  init.sql  install_deps.py  pyproject.toml  requirements.txt  setup_dev.py  start-microservices.sh
microservices/api-gateway/: Dockerfile  requirements.txt
microservices/api-gateway/app/: main.py
microservices/folders-service/: Dockerfile  requirements.txt
microservices/folders-service/app/: main.py
microservices/notes-service/: Dockerfile
microservices/notes-service/app/: main.py
microservices/shared/: __init__.py
microservices/shared/database/: __init__.py  connection.py  models.py
microservices/shared/schemas/: __init__.py  base.py
microservices/shared/utils/: __init__.py  monitoring.py
monitoring/: README.md  docker-compose.monitoring.yml  start-monitoring.sh
scripts/: build-images.sh  deploy-k8s.sh  start.sh
(+30 files in other folders)
